--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@monaco-editor/react": "3.7.5",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,9 +15,11 @@
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
     "@types/react-resizable": "1.7.2",
+    "@uiw/react-md-editor": "2.1.1",
     "axios": "^1.4.0",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
+    "immer": "^10.0.2",
     "jscodeshift": "0.11.0",
     "localforage": "^1.10.0",
     "monaco-editor": "0.39.0",
@@ -24,6 +27,7 @@
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
     "react-resizable": "1.11.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
