--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@monaco-editor/react": "3.7.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,7 +20,6 @@
     "axios": "^1.4.0",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
-    "immer": "^10.0.2",
     "jscodeshift": "0.11.0",
     "localforage": "^1.10.0",
     "monaco-editor": "0.39.0",
